# cs-e4660

./: .gitignore  NOTEBOOK.md  README.md  SCENARIOS.md  ai_agent.py  cloud_service.py  config.alloy  docker-compose.yml  experiment_cases_builder.py  experiment_scenario_builder.py  generate_test_data.py  nanomq.conf  pyproject.toml  reset_loki.sh  run_quick_experiment.py  simulator.py  switch_scenario.sh
ai-agent/: discord_service.py  main.py
ai_agent/: discord_service.py  loki_service.py  main.py  prompt.py
docs/: Device_Scenarios.md  Experiment_Analysis.md
experiment-results/scenario-1/: Experiment_Report_1.md  Experiment_Report_2.md  Experiment_Report_3.md  Experiment_Report_4.md  Experiment_Report_5.md  experiment_results_1.json  experiment_results_2.json  experiment_results_3.json  experiment_results_4.json  experiment_results_5.json
experiment-results/scenario-2/: Experiment_Report_1.md  Experiment_Report_2.md  Experiment_Report_3.md  Experiment_Report_4.md  Experiment_Report_5.md  experiment_results_1.json  experiment_results_2.json  experiment_results_3.json  experiment_results_4.json  experiment_results_5.json
experiment-results/scenario-3/: Experiment_Report_1.md  Experiment_Report_2.md  Experiment_Report_3.md  Experiment_Report_4.md  Experiment_Report_5.md  experiment_results_1.json  experiment_results_2.json  experiment_results_3.json  experiment_results_4.json  experiment_results_5.json
experiment-results/scenario-4/: Experiment_Report_1.md  Experiment_Report_2.md  (+8 more)
study-logs/: study-log-1.md  study-log-2.md  study-log-3.md  study-log-4.md
(+10 files in other folders)
